--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "aylien_textapi": "^0.5.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
